<resources>
    <string name="app_name">HomeHood</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="signup_to_register">Sign up to Register</string>
    <string name="app_title">Welcome to HomeHood</string>
    <string name="signin">Sign in</string>
    <string name="signUp">SignUp</string>
    <string name="number_of_units">Number of units</string>
    <string name="send_message_to">Send Message to:</string>
    <string name="sms">Sms</string>
    <string name="mobile">Mobile</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Full Address</string>
    <string name="confirm_btn">Confirm</string>
    <string name="email">Email</string>
    <string name="home_hood">HomeHood</string>
    <string name="reports">Reports</string>
    <string name="profile">Profile</string>
    <string name="exit">Exit</string>
    <string name="announcements">Announcements</string>
    <string name="expenses">Expenses</string>
    <string name="payments">Payments</string>
    <string name="full_name">Full Name</string>
    <string name="close">close</string>
    <string name="confirmation_type">Confirmation type</string>
    <string name="somethingWentWrong">Something went wrong :(</string>
    <string name="somethingWentWrongOnInsert">Something went wrong on insert :(</string>
    <string name="somethingWentWrongOnUpdate">Something went wrong on update:(</string>
    <string name="somethingWentWrongOnDelete">Something went wrong on delete :(</string>
    <string name="somethingWentWrongOnCheckUser">Something went wrong on Check for user existence:(</string>
    <string name="wrongUserNameOrPassword">Wrong username or password!</string>
    <string name="cannotGetUserFromDb"> Cannot get user from DB!</string>
    <string name="selectSomewhereOnMap"> Please select somewhere on map</string>
    <string name="fillNumberOfUnits">Please fill number of units</string>
    <string name="newExpenseAdded">New Expense Added!</string>
    <string name="cantAddNewExpense">Can\'t add new Expense :(</string>
    <string name="cantGetExpensesFromDb">Can\'t read Expenses from Db!</string>
    <string name="savelocation">Save Location</string>
    <string name="inappropriateInput">Inappropriate input!</string>
    <string name="itemRemoved">Item Removed</string>
    <string name="itemPayedSuccessfully">Item Payed Successfully!</string>
    <string name="optionNotImplYet">this option is not implemented yet!</string>
    <string name="emptyUsernameField">UserName field is EMPTY!</string>
    <string name="emptyPasswordField">Password field is EMPTY!</string>
    <string name="userNotExist">User not exist in DB!</string>
    <string name="userExist">User exist!</string>
    <string name="networkConnectionError">Network Connection Error!</string>
    <string name="networkJsonError">Cannot convert data to json</string>
    <string name="networkGeneralError">Network Error!</string>
    <string name="fill">Fill!</string>
    <string name="cantLogout">Can\'t log out, Please try again</string>
    <string name="itemCheckedSuccessfully">Item Checked Successfully!</string>
    <string name="filePathNotSet">File Path Not Set!</string>
    <string name="filePathNotFound">File Path Not Found!</string>
    <string name="youAreNotPermittedToReadThisFile">You Not Permitted To Read This File!</string>
    <string name="exportingFileDoneSuccessfully">Exporting File Done Successfully!</string>
    <string name="importingFileDoneSuccessfully">Importing File Done Successfully!</string>
    <string name="externalStorageNotReadyToUse">External Storage Not Ready To Use!</string>
    <string name="fileNotExist">File Not Exist!</string>
    <string name="problemToReadFromFile">Problem To Read From File!</string>
    <string name="problemToWriteOnFile">Problem To Write On File!</string>
    <string name="errorMessageNotExist">Error Message Not Exist!</string>
    <string name="chooseLocation">Please choose your location</string>
    <string name="passwordLengthError">Password length must be 6 or more</string>

    <string name="successfulRegister">You Signed up Successfully!</string>
    <string name="cantGetUsersFromDb">Can\'t read users from Db!</string>
    <string name="cantSignUpError">Can\'t sign up, please try again!</string>
    <string name="cantSignInError">Can\'t sign in, please try again!</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="paymentDate">Payment Date</string>
    <string name="expenseType">Expense Type</string>
    <string name="save">Save</string>
    <string name="new_expense">New Expense</string>
    <string name="dateExample">"2020-10-01"</string>
    <string name="export_data">Export</string>
    <string name="import_data">Import</string>
    <string-array name="expenseTypes">

        <item>Repairs</item>
        <item>Gas Bill</item>
        <item>Water Bill</item>
        <item>Electricity Bill</item>
    </string-array>
</resources>