<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/app_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:src="@drawable/people"
        android:contentDescription="@string/app_title"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="start"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="ali.g"
            />

        <EditText
            android:id="@+id/password_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="start"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:text="123456"

            />


        <Button
            android:id="@+id/signIn_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/darkblue_gradient_curve_btn"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/signin"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="30dp"
        android:background="@color/white"
        android:gravity="center"
        android:onClick="registerBtn"
        android:text="@string/signup_to_register"
        android:textColor="@color/gray"
        tools:ignore="OnClick" />


</LinearLayout>